--- a/gb/21/5/8/n12932825.md
+++ b/gb/21/5/8/n12932825.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yrwdct367/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yrwdct367/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yrwdct367/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yrwdct367/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【金色种子】受“九天班”启悟的武林奇士</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12934664-golden-seeds-top-image-600x400.jpg" />
 <h6>《金色种子》封面（博大出版社提供）
 </h6>
 <hr>
-<p><span style="color: #333399;">【缘起】《<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E9%87%91%E8%89%B2%E7%A7%8D%E5%AD%90-%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E5%9C%A8%E5%8F%B0%E6%B9%BE%E7%9A%84%E6%95%85%E4%BA%8B.md#1">金色种子——法轮大法在台湾的故事</a>》这本书主要纪录了<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>在台湾发展的脉络及一些感人的故事，而这些珍贵的历程也是一部活的历史。</span></p>
+<p><span style="color: #333399;">【缘起】《<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%87%91%E8%89%B2%E7%A7%8D%E5%AD%90-%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E5%9C%A8%E5%8F%B0%E6%B9%BE%E7%9A%84%E6%95%85%E4%BA%8B.md#1">金色种子——法轮大法在台湾的故事</a>》这本书主要纪录了<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>在台湾发展的脉络及一些感人的故事，而这些珍贵的历程也是一部活的历史。</span></p>
 <p><span style="color: #333399;">1994年，一对台北夫妻在山东济南的奇妙缘起，上海医师的远渡来台，贵州老翁的花莲探亲，捎来了大法的种子，串起了旷世难遇的修炼机缘。</span></p>
 <p><span style="color: #333399;">2016年2月编辑小组逐步展开台湾北、中、南各地的专访，历经录音档听打后再交互查询比对，历经三年，终能汇整集成册。比原来预期的还要艰难。</span></p>
-<p><span style="color: #333399;">欣逢5月13日世界<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md#1">法轮大法</a>日，大纪元推出《金色种子》一书全文连载，期望这本书的刊登，让法轮大法在台湾的发展足迹，能够更完整的留下一个历史见证。</span></p>
-<p><ahref=><a href="https://github.com/yrwdct367/djy/blob/master/gb/21/5/8/n12932594.md#1" target="_blank" rel="noopener noreferrer">接前文</a>）</p>
-<p>摆脱顽疾，获得真法、真道，刘皇影开始向周遭人介绍<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>。任职于台湾知名集团的他自不免大力的向公司同仁介绍。</p>
+<p><span style="color: #333399;">欣逢5月13日世界<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md#1">法轮大法</a>日，大纪元推出《金色种子》一书全文连载，期望这本书的刊登，让法轮大法在台湾的发展足迹，能够更完整的留下一个历史见证。</span></p>
+<p><ahref=><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/8/n12932594.md#1" target="_blank" rel="noopener noreferrer">接前文</a>）</p>
+<p>摆脱顽疾，获得真法、真道，刘皇影开始向周遭人介绍<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>。任职于台湾知名集团的他自不免大力的向公司同仁介绍。</p>
 <p>这天是部门经理预定要参加“九天学法炼功班”的第一天，而集团处长洪吉弘也恰巧在此日前来视察。洪吉弘自小是虔诚的基督徒，是基督教会长老，一开始他以为这是佛教的课程，经刘皇影说明才知这是一种性命双修的上乘气功，而且是免费的，这让喜爱练武的洪吉弘有了学炼的兴致，于是当天也一起参与了九天班。</p>
 <figure id="attachment_12958059" aria-describedby="caption-attachment-12958059" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/05/id12958059-golden-seeds43-1.jpg"><img class="size-large wp-image-12958059" src="https://i.epochtimes.com/assets/uploads/2021/05/id12958059-golden-seeds43-1-600x461.jpg" alt="金色种子" width="600" b="461" /></a><figcaption id="caption-attachment-12958059" class="wp-caption-text">刘皇影（右一）修炼法轮功后，于一九九六年十月参加北京国际交流会到天坛公园与学员一起炼功。（博大出版社提供）</figcaption></figure>
 <p>洪吉弘从小就对武术非常有兴趣，高中一年级开始习武，少林拳、吕步拳、白鹤拳及各种内外家功夫，无不涉猎。对学武具有夙慧的他，每到武术馆看到新的武学套路，就能举一反三，并用对方的套路破对方的拳法。退伍回乡后，洪吉弘开始练习静坐及太极拳等各种内家功夫，他还曾担任中华民国杨家太极拳协会副秘书长。“我就喜欢学功夫，只要有功夫就想学，所以总是觉得意犹未尽。”</p>
@@ -19,7 +19,7 @@
 <p>有一年台湾举办散打搏击国际擂台赛，洪吉弘应邀参加赛后的庆功宴。宴会中，赛事总教头介绍他时，把他的太极拳功夫形容得很厉害。结果，当下来自世界各国参赛的十几位高手都围过来切磋，此时有两位韩国跆拳高手问及动态攻击的化解原理，洪吉弘请他们尽管使劲出拳，在拳头触及洪吉弘前胸之前，只见洪吉弘身体微微一震，而出拳的两人却“唰”一声飞出了两米多外，同时跌坐在地上。</p>
 <p>虽然洪吉弘武术境界高深，但他却心知太极拳自张三丰以降，拳法曾经被大幅改动过，而且真正精华所在的“心法”并没有流传下来，心里甚是遗憾。</p>
 <p>“结果去上九天班，发现一辈子所追求的东西全部都在这里，我练过那么多功法，我马上领悟，我觉得李老师泄尽天机啦！”</p>
-<p>一九九六年四月二十四日，洪吉弘上了第一天的九天班，内心兴奋莫名，他从此牢记这个日子，他说这天是他人生的转捩点。“李老师讲的法，就是我一辈子所追求、所要的东西。因为他的内涵很深。”他发现<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E3%80%8A%E8%BD%AC%E6%B3%95%E8%BD%AE%E3%80%8B.md#1">《转法轮》</a>书中把他以前想知道的武学“心法”完全展现出来。</p>
+<p>一九九六年四月二十四日，洪吉弘上了第一天的九天班，内心兴奋莫名，他从此牢记这个日子，他说这天是他人生的转捩点。“李老师讲的法，就是我一辈子所追求、所要的东西。因为他的内涵很深。”他发现<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E3%80%8A%E8%BD%AC%E6%B3%95%E8%BD%AE%E3%80%8B.md#1">《转法轮》</a>书中把他以前想知道的武学“心法”完全展现出来。</p>
 <p>此外，在他学习第二套功法“法轮桩法”时，当双手缓缓抬起至头前，他有一种前所未有的体验：“我的每个手指头都鼓起来像个大气包，能量非常强，我意识到当时只要往墙壁一打，可能墙壁就一个窟窿，哇！这个功怎么这么强啊？太厉害了，这个功太厉害了！”</p>
 <p>但，何止是气，洪吉弘体认到法轮功利用宇宙的能量演炼，能量场来得又强又快。完全超越气的层次，是真正在高层次上“炼功”了。炼法轮功两个月后，洪吉弘就体会到“通大周天”后的超常现象，这与过去要花很多年才能打通“任督二脉”、“奇经八脉”相比，洪吉弘明白：法轮功带给他的，已远远超出他毕生想追求的境界。</p>
 <p>洪吉弘当时任职于台湾五大家族之一的知名集团，某门派掌门人常帮此家族解决疑难杂症，而这位已开悟的高人却与洪吉弘一见如故。洪吉弘曾经认为自己再努力修行四十年也赶不上这位掌门人，但修炼法轮功八个月后，该掌门人却意外地告诉他：“你现在的功力已经比我高了。”这让洪吉弘震撼不已。</p>
@@ -28,7 +28,7 @@
 <p>“因为我们全家都是基督徒，我儿子从小就是主日学的学生、大学团契里面就是基督团契的主席，都是很虔诚的基督徒。”过去每个星期都上教堂的洪吉弘，变得热衷于炼功，妻儿并不能理解他的这种变化。</p>
 <p>不过，洪吉弘对自己的变化不觉得有什么不妥，他认为基督教与法轮功没有冲突，“我如果是上帝的子民，祂会因为我炼了法轮功，让我身心更加纯净，更有资格回天国。”</p>
 <p>自小信奉基督教，洪吉弘的社会人脉皆在其中，并拥有颇高的地位，当时他的确承受着教友们的质疑与人情压力。</p>
-<p>然而渐渐地，洪吉弘的妻子发现他的脾气似乎改变了。而洪吉弘也默默地给了妻子一本《法轮功》及<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E3%80%8A%E8%BD%AC%E6%B3%95%E8%BD%AE%E3%80%8B.md#1">《转法轮》</a>，并不再多做解释。好奇的她想知道是什么力量让丈夫改变了？于是她一方面看书，一方面观察，“结果发现他在短短的时间内，彻底地把长久以来的火爆脾气改掉了，不再处处唠叨、专挑我的毛病。”</p>
+<p>然而渐渐地，洪吉弘的妻子发现他的脾气似乎改变了。而洪吉弘也默默地给了妻子一本《法轮功》及<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E3%80%8A%E8%BD%AC%E6%B3%95%E8%BD%AE%E3%80%8B.md#1">《转法轮》</a>，并不再多做解释。好奇的她想知道是什么力量让丈夫改变了？于是她一方面看书，一方面观察，“结果发现他在短短的时间内，彻底地把长久以来的火爆脾气改掉了，不再处处唠叨、专挑我的毛病。”</p>
 <p>观察他一年后，妻子、妹妹、两个儿子也都走进了法轮功的修炼行列。</p>
 <p>洪吉弘开怀的说，在外界眼中，他是公认的好人，有一个模范基督徒家庭。但外界所不知的是，“我在家里打小孩打得很凶，只要不乖，我就打。而且我又学过功夫，一打的话就很重，所以每一次打完，我的心就痛。”打完小孩，懊悔的在耶稣面前忏悔，发誓不再犯，“刚发完誓，看到不乖，又打。”</p>
 <p>但他的儿子发现，炼了法轮功以后，父亲不再打人了。</p>
@@ -37,11 +37,11 @@
 <p>而过去练某派气功时，为了验证成果，洪吉弘曾拿一根约一点五公分粗的钢筋往头上用力一砸，一瞬间钢筋就弯了，而洪吉弘的头顶虽然没破皮也没瘀血，但从此头顶中心里有一个软软小水球般的瘀积。</p>
 <p>直到炼法轮功后，有一天头顶那块软软的地方神奇的裂开了一个洞，里面的水慢慢的流出来，然后裂缝又自动闭合。这让他更真实地体验到《转法轮》所说，炼法轮功身体会自动净化。</p>
 <p>这名现代侠客从此折服于法轮功，安顿身心于此，不再猎奇寻觅。</p>
-<p>一九九七年四月，由于郑文煌逐渐搬迁到宜兰居住，洪吉弘就在台北自家开办起九天学法炼功班。一九九七年十一月李洪志先生来台期间，他更担任司机载着李老师绕行台湾一圈。台湾<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md#1">法轮大法</a>学会成立之后，他曾担任学会秘书长很长一段时间。</p>
+<p>一九九七年四月，由于郑文煌逐渐搬迁到宜兰居住，洪吉弘就在台北自家开办起九天学法炼功班。一九九七年十一月李洪志先生来台期间，他更担任司机载着李老师绕行台湾一圈。台湾<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md#1">法轮大法</a>学会成立之后，他曾担任学会秘书长很长一段时间。</p>
 <figure id="attachment_12949356" aria-describedby="caption-attachment-12949356" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/05/id12949356-golden-seeds-51.jpg"><img class="size-medium wp-image-12949356" src="https://i.epochtimes.com/assets/uploads/2021/05/id12949356-golden-seeds-51-450x317.jpg" alt="金色种子" width="450" b="317" /></a><figcaption id="caption-attachment-12949356" class="wp-caption-text">李洪志老师（中）于一九九七年十一月在台北学法点门口与学员聂淑文（左）、洪吉弘（右）合影。（博大出版社提供）</figcaption></figure>
-<p><ahref=><a href="https://github.com/yrwdct367/djy/blob/master/gb/21/5/9/n12934016.md#1" target="_blank" rel="noopener noreferrer">接下文</a>）@</p>
-<p><em>点阅【<span style="color: #000080;"><a style="color: #000080;" href="https://github.com/yrwdct367/djy/blob/master/gb/tag/金色种子——法轮大法在台湾的故事.md#1">金色种子——法轮大法在台湾的故事</a></span>】系列文章。</em></p>
-<p>本文选自《<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E9%87%91%E8%89%B2%E7%A7%8D%E5%AD%90-%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E5%9C%A8%E5%8F%B0%E6%B9%BE%E7%9A%84%E6%95%85%E4%BA%8B.md#1">金色种子——法轮大法在台湾的故事</a>》／版权归博大出版社<ahref="http://broadpressinc.com/">http://broadpressinc.com/</a>所有，欢迎传阅和转载，不得更改。</p>
+<p><ahref=><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/9/n12934016.md#1" target="_blank" rel="noopener noreferrer">接下文</a>）@</p>
+<p><em>点阅【<span style="color: #000080;"><a style="color: #000080;" href="https://github.com/hoxgwd311/djy/blob/master/gb/tag/金色种子——法轮大法在台湾的故事.md#1">金色种子——法轮大法在台湾的故事</a></span>】系列文章。</em></p>
+<p>本文选自《<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%87%91%E8%89%B2%E7%A7%8D%E5%AD%90-%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E5%9C%A8%E5%8F%B0%E6%B9%BE%E7%9A%84%E6%95%85%E4%BA%8B.md#1">金色种子——法轮大法在台湾的故事</a>》／版权归博大出版社<ahref="http://broadpressinc.com/">http://broadpressinc.com/</a>所有，欢迎传阅和转载，不得更改。</p>
 <p>购书请洽：<br />
 博客来网路书店 https://www.books.com.tw/products/0010840719<br />
 金石堂网路书店 https://www.kingstone.com.tw/basic/2012710067523/</p>
@@ -51,47 +51,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/19/11/19/n11665926.md#1">张锦华：新书《金色种子》序言</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/20/4/7/n12009988.md#1">新书《金色种子》讲述法轮大法在台湾故事</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/20/6/15/n12186358.md#1">曙光里的金色种子</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/21/5/7/n12929954.md#1">【金色种子】第一个修炼法轮功的台湾人</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/21/5/8/n12932594.md#1">【金色种子】法轮大法在北台湾萌芽 建立全台第一个炼功点</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/1/19/n13516514.md#1">惠虎宇：穿越生死的《沉默呼声》</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/1/1/n13474190.md#1">一位总参办少校参谋的故事（下）</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/1/1/n13474185.md#1">一位总参办少校参谋的故事（上）</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/21/12/30/n13468191.md#1">从高傲到谦卑 台湾精神科医师的修炼故事</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/21/10/18/n13311349.md#1">见证大法的神奇──婺剧演员朱媛珠的故事〈下〉</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/11/19/n11665926.md#1">张锦华：新书《金色种子》序言</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/4/7/n12009988.md#1">新书《金色种子》讲述法轮大法在台湾故事</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/6/15/n12186358.md#1">曙光里的金色种子</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/7/n12929954.md#1">【金色种子】第一个修炼法轮功的台湾人</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/8/n12932594.md#1">【金色种子】法轮大法在北台湾萌芽 建立全台第一个炼功点</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735201.md#1">大法洪传30周年之际 日本学员谢师恩</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/17/n13713678.md#1">缘结法轮功 台湾青年展开新唐人节目制作人生</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/1/19/n13516514.md#1">惠虎宇：穿越生死的《沉默呼声》</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/1/1/n13474190.md#1">一位总参办少校参谋的故事（下）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/1/1/n13474185.md#1">一位总参办少校参谋的故事（上）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11437710.md#1" target="_blank">林辉：国民党撤至台湾后破获的中共渗透大案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/10/n7538390.md#1" target="_blank">晚期食道癌患者：法轮功救了我的命</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/11/n9947822.md#1" target="_blank">文革中自杀的几个名人（2）文联主席老舍</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/19/n11666929.md#1" target="_blank">澳洲自由党参议员抨击中共野蛮强摘器官</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/26/n13607594.md#1">【财商天下】失业潮继续扩大 中共如何稳预期</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605772.md#1">【新闻看点】认定铁链女是小花梅 中共撤拐卖文书</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/21/n13594447.md#1">【思想领袖】莱博维茨：与左派断交的痛苦过程</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13604998.md#1">【更新2.25】乌总统：我们不会放下武器</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605502.md#1">北京陷窘境 凌晨发表对乌克兰五点立场声明</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/27/n13607917.md#1">家乡遭俄军攻击 瑞莎崩溃怒喊：究竟为了什么</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605987.md#1">飞往上海开工 香港歌手许靖韵确诊染疫</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605880.md#1">瑞莎发视频祈求俄乌停战 吴凤发文安慰打气</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/26/n13606713.md#1">俄乌战火将如何波及美国房地产？</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605795.md#1">羽绒衣手洗更长寿！5个清洗技巧常保如新</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741053.md#1">【财商天下】大陆消费和信贷塌方 失业率创新高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740913.md#1">【时事军事】俄军与M777第一次对话 就尝到滋味</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yrwdct367/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yrwdct367/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/8/n12932825.htm">【金色种子】受“九天班”启悟的武林奇士</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/8/n12932825.htm">【金色种子】受“九天班”启悟的武林奇士</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrwdct367/djy/blob/master/gb/21/5/8/n12932825.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yrwdct367/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yrwdct367/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/21/5/8/n12932825.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
